compiler/fir/resolve/testData/resolve/expresssions/invoke/inBrackets.kt
fun test(e: Int.() -> String) {
    val s = 3.<!UNRESOLVED_REFERENCE!>e<!>()
    val ss = 3.(<!UNRESOLVED_REFERENCE!>e<!>)()
}